# prismaquant

./: README.md  pyproject.toml
prismaquant/: README.md  __init__.py  allocator.py  autoscale.py  bakeoff.py  build_rtn_cache.py  calibrate_allocator.py  export_native_compressed.py  format_registry.py  incremental_measure_quant_cost.py  incremental_probe.py  interaction_refine.py  layer_streaming.py  local_reconstruct.py  measure_interactions.py  measure_quant_cost.py  mtp_module.py  oracle_search.py  quadratic_refine_allocator.py  run-pipeline.sh  sensitivity_probe.py  streaming_model.py  tiny_bakeoff.py  validate_native_export.py
prismaquant/model_profiles/: __init__.py  base.py  default.py  gemma4.py  minimax_m2.py  qwen3.py  qwen3_5.py  registry.py  validate.py  vllm_registry.py
prismquant/: allocator.py  export_native_compressed.py  incremental_measure_quant_cost.py  incremental_probe.py  measure_quant_cost.py  sensitivity_probe.py
prismquant/model_profiles/: __init__.py  base.py  gemma4.py  qwen3_5.py  registry.py  validate.py  vllm_registry.py
tests/: test_allocator_sibling_aggregation.py  test_incremental_measure_quant_cost.py  test_incremental_probe.py  test_layer_streaming.py  test_prismaquant_bakeoff.py  test_prismaquant_export_native_compressed.py  test_prismaquant_interaction_refine.py  test_prismaquant_local_reconstruct.py  test_prismaquant_native_math.py  test_prismaquant_tiny_bakeoff.py  test_prismaquant_visual_format.py  test_prismaquant_visual_phase2.py  test_probe_shard_reuse.py
